Update social sharing images and related metadata across multiple HTML files
- Replaced the Open Graph and Twitter image references from "og-image.png" to "social_share.png" in archive.html, index.html, and puzzle.html for consistent branding.
- Updated the README.md to reflect the new social sharing image assets.
- Adjusted the SEO script to dynamically set the new social sharing image in the meta tags.
- Ensured all references to the old image are replaced in the codebase for improved clarity and consistency.

--- a/puzzle.html
+++ b/puzzle.html
@@ -22,7 +22,7 @@
     <!-- Social Sharing Meta Tags (will be updated dynamically by JavaScript) -->
     <meta property="og:title" content="Puzzle - Sum Tile | Daily Word Puzzle" id="og-title">
     <meta property="og:description" content="Daily word puzzle game - Arrange letter tiles to form words in this Scrabble anagram challenge." id="og-description">
-    <meta property="og:image" content="https://sum-tile.uk/og-image.png" id="og-image">
+    <meta property="og:image" content="https://sum-tile.uk/social_share.png" id="og-image">
     <meta property="og:url" content="https://sum-tile.uk/puzzle.html" id="og-url">
     <meta property="og:type" content="article" id="og-type">
     <meta property="og:site_name" content="Sum Tile">
@@ -30,8 +30,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Puzzle - Sum Tile | Daily Word Puzzle" id="twitter-title">
     <meta name="twitter:description" content="Daily word puzzle game - Arrange letter tiles to form words in this Scrabble anagram challenge." id="twitter-description">
-    <meta name="twitter:image" content="https://sum-tile.uk/og-image.png" id="twitter-image">
-    <meta name="twitter:image:src" content="https://sum-tile.uk/og-image.png" id="twitter-image-src">
+    <meta name="twitter:image" content="https://sum-tile.uk/social_share.png" id="twitter-image">
+    <meta name="twitter:image:src" content="https://sum-tile.uk/social_share.png" id="twitter-image-src">
     
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json" id="structured-data-webpage">
