--- a/index.html
+++ b/index.html
@@ -86,9 +86,15 @@
     </a>
 
     <main class="container mx-auto px-4 py-8 flex-1 flex flex-col justify-center items-center" id="main-content">
-        <header class="text-center mb-12">
+        <header class="text-center mb-8">
             <h1 class="text-4xl md:text-5xl font-bold text-text-primary mb-2 inline-block bg-bg-primary px-4 py-2 text-h1-title">Sum Tile</h1>
         </header>
+
+        <div class="text-center max-w-xl mx-auto mb-12 px-4">
+            <p class="text-lg md:text-xl text-text-primary leading-relaxed">
+                Can you arrange these letter tiles to form two words with the exact Scrabble score?
+            </p>
+        </div>
 
         <div class="flex justify-center">
             <a 
