Enhance puzzle completion tracking with time comparison feature
- Added time comparison messages to success modals for daily and archive puzzles, displaying the time taken to complete the puzzle and comparing it with previous attempts.
- Implemented functions to save and retrieve puzzle completion times, improving user feedback on performance.
- Updated HTML to include new elements for displaying time comparison messages.
- Enhanced JavaScript logic to track puzzle start times and calculate completion durations.
- Modified CSS to support new message formatting for better visibility.

--- a/archive.html
+++ b/archive.html
@@ -126,6 +126,8 @@
 
             <p id="archive-hints-used-message" class="text-center text-gray-700 mb-4"></p>
 
+            <p id="archive-time-comparison-message" class="text-center text-gray-700 mb-4 whitespace-pre-line"></p>
+
             <div id="archive-share-message-container" class="mb-6 p-4 bg-gray-50 rounded-lg border border-gray-200">
 
                 <p id="archive-share-message" class="text-sm text-gray-700 whitespace-pre-wrap break-words"></p>
