--- a/puzzle.html
+++ b/puzzle.html
@@ -533,6 +533,7 @@
             </button>
             <h2 id="daily-modal-title" class="text-3xl font-bold text-text-primary mb-4 text-center">You solved the puzzle!</h2>
             <p id="daily-hints-used-message" class="text-center text-gray-600 mb-4"></p>
+            <p id="daily-time-comparison-message" class="text-center text-gray-600 mb-4"></p>
             <div id="daily-share-message-container" class="mb-6 p-4 bg-gray-50 rounded-lg border border-gray-200">
                 <p id="daily-share-message" class="text-sm text-gray-700 whitespace-pre-wrap break-words"></p>
             </div>
@@ -586,6 +587,7 @@
             </button>
             <h2 id="modal-title" class="text-3xl font-bold text-text-primary mb-4 text-center">You solved the puzzle!</h2>
             <p id="hints-used-message" class="text-center text-gray-700 mb-4"></p>
+            <p id="time-comparison-message" class="text-center text-gray-700 mb-4 whitespace-pre-line"></p>
             <div id="share-message-container" class="mb-6 p-4 bg-gray-50 rounded-lg border border-gray-200">
                 <p id="share-message" class="text-sm text-gray-700 whitespace-pre-wrap break-words"></p>
             </div>
